--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -7,6 +7,7 @@
 	<title>CasparCG template OBS bridge</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
